# Emulator6502

./: .gitignore  ChangeLog.md  LICENSE  MEMORY_LAYOUT.md  emulator6502.cabal  hie.yaml  package.yaml  stack.yaml
.hie/: Display.hie  Emulator.hie  Execution.hie  Flags.hie  Instruction.hie  LoadStoreTest.hie  LogicalTest.hie  Main.hie  Paths_emulator6502.hie  StackTest.hie  TestUtils.hie  TransferTest.hie
app/: Main.hs
src/: Decode.hs  Display.hs  Emulator.hs  Execution.hs  Flags.hs  Instruction.hs  Logging.hs  Memory.hs  ProgramCounter.hs  Register.hs  Stack.hs  Types.hs  Utils.hs
src/Assembler/: 2  Analyze.hs  Assemble.hs  CodeGen.hs  Error.hs  Parser.hs  PrettyPrint.hs  Types.hs  Utils.hs
src/Assembler/Types/: ASMState.hs  ASMStatement.hs  ASMTree.hs  Pretty.hs
test/: ADCTest.hs  AnalyzeTest.hs  Arbitrary.hs  BranchTest.hs  DecrementTest.hs  LoadStoreTest.hs  LogicalTest.hs  ParserTest.hs  SBCTest.hs  ShiftTest.hs  StackTest.hs  StatusFlagTest.hs  TESTREADME.md  Test.hs  TestUtils.hs  TransferTest.hs  directive.asm
test/Assembler/: AnalyzeTest.hs
test/Test/: ADCTest.hs  Arbitrary.hs  BranchTest.hs  CompareTest.hs  DecrementTest.hs  IncrementTest.hs  LoadStoreTest.hs  LogicalTest.hs  ParserTest.hs  SBCTest.hs  ShiftTest.hs  StackTest.hs  StatusFlagTest.hs  TestUtils.hs  TransferTest.hs
test/Test/Assembler/: AnalyzeTest.hs
test/files/: directive.asm  operators.asm
