cabal-version: 2.4 

name:           emulator6502
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/drsooch/emulator6502#readme>
homepage:       https://github.com/drsooch/emulator6502#readme
bug-reports:    https://github.com/drsooch/emulator6502/issues
author:         Nick Suchecki
maintainer:     nicksuchecki@gmail.com
copyright:      None
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/drsooch/emulator6502

library
  exposed-modules:
      Decode
      Display
      Execution
      Flags
      Instruction
      Logging
      Memory
      ProgramCounter
      Register
      Stack
      Types
      Utils
  other-modules:
      Paths_emulator6502
  hs-source-dirs:
      src
  default-extensions: RecordWildCards LambdaCase DerivingStrategies GeneralizedNewtypeDeriving DerivingVia DeriveGeneric TypeApplications OverloadedLabels DataKinds AllowAmbiguousTypes MultiWayIf StrictData
  ghc-options: -Wall -O2 -fwrite-ide-info -hiedir=.hie
  build-depends:
      array
    , base >=4.14 && <5
    , directory
    , generic-lens
    , microlens
    , microlens-mtl
    , mtl
    , unix
  default-language: Haskell2010

executable emulator6502-exe
  main-is: Main.hs
  other-modules:
      Paths_emulator6502
  hs-source-dirs:
      app
  default-extensions: RecordWildCards LambdaCase DerivingStrategies GeneralizedNewtypeDeriving DerivingVia DeriveGeneric TypeApplications OverloadedLabels DataKinds AllowAmbiguousTypes MultiWayIf StrictData
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2 -fwrite-ide-info -hiedir=.hie
  build-depends:
      array
    , base >=4.14 && <5
    , directory
    , emulator6502
    , generic-lens
    , microlens
    , microlens-mtl
    , mtl
    , unix
  default-language: Haskell2010

test-suite emulator6502-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      ADCTest
      LoadStoreTest
      LogicalTest
      StackTest
      TestUtils
      TransferTest
      Paths_emulator6502
  hs-source-dirs:
      test
  default-extensions: RecordWildCards LambdaCase DerivingStrategies GeneralizedNewtypeDeriving DerivingVia DeriveGeneric TypeApplications OverloadedLabels DataKinds AllowAmbiguousTypes MultiWayIf StrictData
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N 
  build-depends:
      array
    , base >=4.14 && <5
    , directory
    , emulator6502
    , generic-lens
    , microlens
    , microlens-mtl
    , mtl
    , tasty
    , tasty-hunit
    , unix
  default-language: Haskell2010
